@@ -1,5 +1,6 @@
 Release 2.5:
   * Switched to a header-only RNACI.
+  * Fixed some portability issues in meminfo.
 
 Release 2.4:
   * Major documentation refactor; switched to roxygen2.
